y.output
   0  $accept : start $end

   1  start : statements

   2  statements :
   3             | '{' P statements '}' Q
   4             | statement statements

   5  statement : declaration ';'
   6            | assignment ';'
   7            | function
   8            | if_statement lbl
   9            | while_statement lbl
  10            | for_statement lbl

  11  declaration : type vars

  12  type : INT_
  13       | FLOAT_

  14  vars : var
  15       | var ',' vars

  16  var : addresses IDENTIFIER arrays

  17  addresses :
  18            | '*' addresses
  19            | '&' addresses

  20  arrays :
  21         | '[' num ']' arrays

  22  num : NUMBER

  23  assignment : expression
  24             | postfix_expression assign_oper assignment

  25  assign_oper : '='
  26              | NEQ
  27              | ADDEQ
  28              | SUBEQ
  29              | MULEQ
  30              | DIVEQ
  31              | MODEQ
  32              | LSHIFTEQ
  33              | RSHIFTEQ
  34              | ANDEQ
  35              | XOREQ
  36              | OREQ

  37  function : declaration E '(' opt_declaration ')' ';'
  38           | declaration E '(' opt_declaration ')' '{' statements '}'

  39  E :

  40  P :

  41  Q :

  42  opt_declaration :
  43                  | declaration

  44  if_statement : IF '(' expression ')' lbl statement

  45  while_statement : WHILE '(' lbl expression ')' lbl statement jump

  46  for_statement : FOR '(' opt_expression ';' lbl opt_expression ';' lbl opt_expression jump ')' lbl statement jump

  47  opt_expression :
  48                 | assignment

  49  jump :

  50  expression : logical_or

  51  logical_or : logical_and
  52             | logical_or LOR lbl logical_and

  53  logical_and : additive_expression
  54              | logical_and LAND lbl additive_expression

  55  additive_expression : multiplicative_expression
  56                      | additive_expression '+' multiplicative_expression
  57                      | additive_expression '-' multiplicative_expression

  58  multiplicative_expression : postfix_expression
  59                            | multiplicative_expression '*' postfix_expression
  60                            | multiplicative_expression '/' postfix_expression

  61  postfix_expression : prefix_expression
  62                     | prefix_expression INCR
  63                     | prefix_expression DECR

  64  prefix_expression : terminal
  65                    | INCR terminal
  66                    | DECR terminal

  67  arrayref :
  68           | arrayref '[' expression ']'

  69  terminal : TRUE
  70           | FALSE
  71           | IDENTIFIER arrayref
  72           | NUMBER

  73  lbl :

state 0
	$accept : . start $end  (0)
	statements : .  (2)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	'{'  shift 12
	$end  reduce 2

	start  goto 13
	statement  goto 14
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	statements  goto 24
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 1
	while_statement : WHILE . '(' lbl expression ')' lbl statement jump  (45)

	'('  shift 31
	.  error


state 2
	for_statement : FOR . '(' opt_expression ';' lbl opt_expression ';' lbl opt_expression jump ')' lbl statement jump  (46)

	'('  shift 32
	.  error


state 3
	if_statement : IF . '(' expression ')' lbl statement  (44)

	'('  shift 33
	.  error


state 4
	prefix_expression : INCR . terminal  (65)

	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 34


state 5
	prefix_expression : DECR . terminal  (66)

	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 35


state 6
	terminal : TRUE .  (69)

	.  reduce 69


state 7
	terminal : FALSE .  (70)

	.  reduce 70


state 8
	terminal : NUMBER .  (72)

	.  reduce 72


state 9
	terminal : IDENTIFIER . arrayref  (71)
	arrayref : .  (67)

	.  reduce 67

	arrayref  goto 36


state 10
	type : INT_ .  (12)

	.  reduce 12


state 11
	type : FLOAT_ .  (13)

	.  reduce 13


state 12
	statements : '{' . P statements '}' Q  (3)
	P : .  (40)

	.  reduce 40

	P  goto 37


state 13
	$accept : start . $end  (0)

	$end  accept


state 14
	statements : statement . statements  (4)
	statements : .  (2)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	'{'  shift 12
	$end  reduce 2
	'}'  reduce 2

	statement  goto 14
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	statements  goto 38
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 15
	expression : logical_or .  (50)
	logical_or : logical_or . LOR lbl logical_and  (52)

	LOR  shift 39
	';'  reduce 50
	']'  reduce 50
	')'  reduce 50


state 16
	logical_or : logical_and .  (51)
	logical_and : logical_and . LAND lbl additive_expression  (54)

	LAND  shift 40
	LOR  reduce 51
	';'  reduce 51
	']'  reduce 51
	')'  reduce 51


state 17
	prefix_expression : terminal .  (64)

	.  reduce 64


state 18
	assignment : expression .  (23)

	.  reduce 23


state 19
	additive_expression : multiplicative_expression .  (55)
	multiplicative_expression : multiplicative_expression . '*' postfix_expression  (59)
	multiplicative_expression : multiplicative_expression . '/' postfix_expression  (60)

	'*'  shift 41
	'/'  shift 42
	LAND  reduce 55
	LOR  reduce 55
	';'  reduce 55
	']'  reduce 55
	')'  reduce 55
	'+'  reduce 55
	'-'  reduce 55


state 20
	logical_and : additive_expression .  (53)
	additive_expression : additive_expression . '+' multiplicative_expression  (56)
	additive_expression : additive_expression . '-' multiplicative_expression  (57)

	'+'  shift 43
	'-'  shift 44
	LAND  reduce 53
	LOR  reduce 53
	';'  reduce 53
	']'  reduce 53
	')'  reduce 53


state 21
	statement : if_statement . lbl  (8)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 45


state 22
	assignment : postfix_expression . assign_oper assignment  (24)
	multiplicative_expression : postfix_expression .  (58)

	MULEQ  shift 46
	DIVEQ  shift 47
	MODEQ  shift 48
	ADDEQ  shift 49
	SUBEQ  shift 50
	LSHIFTEQ  shift 51
	RSHIFTEQ  shift 52
	ANDEQ  shift 53
	XOREQ  shift 54
	OREQ  shift 55
	NEQ  shift 56
	'='  shift 57
	LAND  reduce 58
	LOR  reduce 58
	';'  reduce 58
	'*'  reduce 58
	')'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'/'  reduce 58

	assign_oper  goto 58


state 23
	postfix_expression : prefix_expression .  (61)
	postfix_expression : prefix_expression . INCR  (62)
	postfix_expression : prefix_expression . DECR  (63)

	INCR  shift 59
	DECR  shift 60
	MULEQ  reduce 61
	DIVEQ  reduce 61
	MODEQ  reduce 61
	ADDEQ  reduce 61
	SUBEQ  reduce 61
	LSHIFTEQ  reduce 61
	RSHIFTEQ  reduce 61
	ANDEQ  reduce 61
	XOREQ  reduce 61
	OREQ  reduce 61
	NEQ  reduce 61
	LAND  reduce 61
	LOR  reduce 61
	';'  reduce 61
	'*'  reduce 61
	']'  reduce 61
	'='  reduce 61
	')'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'/'  reduce 61


state 24
	start : statements .  (1)

	.  reduce 1


state 25
	statement : assignment . ';'  (6)

	';'  shift 61
	.  error


state 26
	statement : while_statement . lbl  (9)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 62


state 27
	statement : for_statement . lbl  (10)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 63


state 28
	statement : function .  (7)

	.  reduce 7


state 29
	statement : declaration . ';'  (5)
	function : declaration . E '(' opt_declaration ')' ';'  (37)
	function : declaration . E '(' opt_declaration ')' '{' statements '}'  (38)
	E : .  (39)

	';'  shift 64
	'('  reduce 39

	E  goto 65


state 30
	declaration : type . vars  (11)
	addresses : .  (17)

	'*'  shift 66
	'&'  shift 67
	IDENTIFIER  reduce 17

	vars  goto 68
	var  goto 69
	addresses  goto 70


state 31
	while_statement : WHILE '(' . lbl expression ')' lbl statement jump  (45)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 71


state 32
	for_statement : FOR '(' . opt_expression ';' lbl opt_expression ';' lbl opt_expression jump ')' lbl statement jump  (46)
	opt_expression : .  (47)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	';'  reduce 47

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 22
	prefix_expression  goto 23
	assignment  goto 72
	opt_expression  goto 73


state 33
	if_statement : IF '(' . expression ')' lbl statement  (44)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 74
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 75
	prefix_expression  goto 23


state 34
	prefix_expression : INCR terminal .  (65)

	.  reduce 65


state 35
	prefix_expression : DECR terminal .  (66)

	.  reduce 66


state 36
	arrayref : arrayref . '[' expression ']'  (68)
	terminal : IDENTIFIER arrayref .  (71)

	'['  shift 76
	MULEQ  reduce 71
	DIVEQ  reduce 71
	MODEQ  reduce 71
	ADDEQ  reduce 71
	SUBEQ  reduce 71
	LSHIFTEQ  reduce 71
	RSHIFTEQ  reduce 71
	ANDEQ  reduce 71
	XOREQ  reduce 71
	OREQ  reduce 71
	INCR  reduce 71
	DECR  reduce 71
	NEQ  reduce 71
	LAND  reduce 71
	LOR  reduce 71
	';'  reduce 71
	'*'  reduce 71
	']'  reduce 71
	'='  reduce 71
	')'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'/'  reduce 71


state 37
	statements : '{' P . statements '}' Q  (3)
	statements : .  (2)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	'{'  shift 12
	'}'  reduce 2

	statement  goto 14
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	statements  goto 77
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 38
	statements : statement statements .  (4)

	.  reduce 4


state 39
	logical_or : logical_or LOR . lbl logical_and  (52)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 78


state 40
	logical_and : logical_and LAND . lbl additive_expression  (54)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 79


state 41
	multiplicative_expression : multiplicative_expression '*' . postfix_expression  (59)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 17
	postfix_expression  goto 80
	prefix_expression  goto 23


state 42
	multiplicative_expression : multiplicative_expression '/' . postfix_expression  (60)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 17
	postfix_expression  goto 81
	prefix_expression  goto 23


state 43
	additive_expression : additive_expression '+' . multiplicative_expression  (56)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 17
	multiplicative_expression  goto 82
	postfix_expression  goto 75
	prefix_expression  goto 23


state 44
	additive_expression : additive_expression '-' . multiplicative_expression  (57)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 17
	multiplicative_expression  goto 83
	postfix_expression  goto 75
	prefix_expression  goto 23


state 45
	statement : if_statement lbl .  (8)

	.  reduce 8


state 46
	assign_oper : MULEQ .  (29)

	.  reduce 29


state 47
	assign_oper : DIVEQ .  (30)

	.  reduce 30


state 48
	assign_oper : MODEQ .  (31)

	.  reduce 31


state 49
	assign_oper : ADDEQ .  (27)

	.  reduce 27


state 50
	assign_oper : SUBEQ .  (28)

	.  reduce 28


state 51
	assign_oper : LSHIFTEQ .  (32)

	.  reduce 32


state 52
	assign_oper : RSHIFTEQ .  (33)

	.  reduce 33


state 53
	assign_oper : ANDEQ .  (34)

	.  reduce 34


state 54
	assign_oper : XOREQ .  (35)

	.  reduce 35


state 55
	assign_oper : OREQ .  (36)

	.  reduce 36


state 56
	assign_oper : NEQ .  (26)

	.  reduce 26


state 57
	assign_oper : '=' .  (25)

	.  reduce 25


state 58
	assignment : postfix_expression assign_oper . assignment  (24)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 22
	prefix_expression  goto 23
	assignment  goto 84


state 59
	postfix_expression : prefix_expression INCR .  (62)

	.  reduce 62


state 60
	postfix_expression : prefix_expression DECR .  (63)

	.  reduce 63


state 61
	statement : assignment ';' .  (6)

	.  reduce 6


state 62
	statement : while_statement lbl .  (9)

	.  reduce 9


state 63
	statement : for_statement lbl .  (10)

	.  reduce 10


state 64
	statement : declaration ';' .  (5)

	.  reduce 5


state 65
	function : declaration E . '(' opt_declaration ')' ';'  (37)
	function : declaration E . '(' opt_declaration ')' '{' statements '}'  (38)

	'('  shift 85
	.  error


state 66
	addresses : '*' . addresses  (18)
	addresses : .  (17)

	'*'  shift 66
	'&'  shift 67
	IDENTIFIER  reduce 17

	addresses  goto 86


state 67
	addresses : '&' . addresses  (19)
	addresses : .  (17)

	'*'  shift 66
	'&'  shift 67
	IDENTIFIER  reduce 17

	addresses  goto 87


state 68
	declaration : type vars .  (11)

	.  reduce 11


state 69
	vars : var .  (14)
	vars : var . ',' vars  (15)

	','  shift 88
	';'  reduce 14
	'('  reduce 14
	')'  reduce 14


state 70
	var : addresses . IDENTIFIER arrays  (16)

	IDENTIFIER  shift 89
	.  error


state 71
	while_statement : WHILE '(' lbl . expression ')' lbl statement jump  (45)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 90
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 75
	prefix_expression  goto 23


state 72
	opt_expression : assignment .  (48)

	.  reduce 48


state 73
	for_statement : FOR '(' opt_expression . ';' lbl opt_expression ';' lbl opt_expression jump ')' lbl statement jump  (46)

	';'  shift 91
	.  error


state 74
	if_statement : IF '(' expression . ')' lbl statement  (44)

	')'  shift 92
	.  error


state 75
	multiplicative_expression : postfix_expression .  (58)

	.  reduce 58


state 76
	arrayref : arrayref '[' . expression ']'  (68)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 93
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 75
	prefix_expression  goto 23


state 77
	statements : '{' P statements . '}' Q  (3)

	'}'  shift 94
	.  error


state 78
	logical_or : logical_or LOR lbl . logical_and  (52)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	logical_and  goto 95
	terminal  goto 17
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 75
	prefix_expression  goto 23


state 79
	logical_and : logical_and LAND lbl . additive_expression  (54)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	.  error

	terminal  goto 17
	multiplicative_expression  goto 19
	additive_expression  goto 96
	postfix_expression  goto 75
	prefix_expression  goto 23


state 80
	multiplicative_expression : multiplicative_expression '*' postfix_expression .  (59)

	.  reduce 59


state 81
	multiplicative_expression : multiplicative_expression '/' postfix_expression .  (60)

	.  reduce 60


state 82
	additive_expression : additive_expression '+' multiplicative_expression .  (56)
	multiplicative_expression : multiplicative_expression . '*' postfix_expression  (59)
	multiplicative_expression : multiplicative_expression . '/' postfix_expression  (60)

	'*'  shift 41
	'/'  shift 42
	LAND  reduce 56
	LOR  reduce 56
	';'  reduce 56
	']'  reduce 56
	')'  reduce 56
	'+'  reduce 56
	'-'  reduce 56


state 83
	additive_expression : additive_expression '-' multiplicative_expression .  (57)
	multiplicative_expression : multiplicative_expression . '*' postfix_expression  (59)
	multiplicative_expression : multiplicative_expression . '/' postfix_expression  (60)

	'*'  shift 41
	'/'  shift 42
	LAND  reduce 57
	LOR  reduce 57
	';'  reduce 57
	']'  reduce 57
	')'  reduce 57
	'+'  reduce 57
	'-'  reduce 57


state 84
	assignment : postfix_expression assign_oper assignment .  (24)

	.  reduce 24


state 85
	function : declaration E '(' . opt_declaration ')' ';'  (37)
	function : declaration E '(' . opt_declaration ')' '{' statements '}'  (38)
	opt_declaration : .  (42)

	INT_  shift 10
	FLOAT_  shift 11
	')'  reduce 42

	declaration  goto 97
	opt_declaration  goto 98
	type  goto 30


state 86
	addresses : '*' addresses .  (18)

	.  reduce 18


state 87
	addresses : '&' addresses .  (19)

	.  reduce 19


state 88
	vars : var ',' . vars  (15)
	addresses : .  (17)

	'*'  shift 66
	'&'  shift 67
	IDENTIFIER  reduce 17

	vars  goto 99
	var  goto 69
	addresses  goto 70


state 89
	var : addresses IDENTIFIER . arrays  (16)
	arrays : .  (20)

	'['  shift 100
	';'  reduce 20
	','  reduce 20
	'('  reduce 20
	')'  reduce 20

	arrays  goto 101


state 90
	while_statement : WHILE '(' lbl expression . ')' lbl statement jump  (45)

	')'  shift 102
	.  error


state 91
	for_statement : FOR '(' opt_expression ';' . lbl opt_expression ';' lbl opt_expression jump ')' lbl statement jump  (46)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 103


state 92
	if_statement : IF '(' expression ')' . lbl statement  (44)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 104


state 93
	arrayref : arrayref '[' expression . ']'  (68)

	']'  shift 105
	.  error


state 94
	statements : '{' P statements '}' . Q  (3)
	Q : .  (41)

	.  reduce 41

	Q  goto 106


state 95
	logical_or : logical_or LOR lbl logical_and .  (52)
	logical_and : logical_and . LAND lbl additive_expression  (54)

	LAND  shift 40
	LOR  reduce 52
	';'  reduce 52
	']'  reduce 52
	')'  reduce 52


state 96
	logical_and : logical_and LAND lbl additive_expression .  (54)
	additive_expression : additive_expression . '+' multiplicative_expression  (56)
	additive_expression : additive_expression . '-' multiplicative_expression  (57)

	'+'  shift 43
	'-'  shift 44
	LAND  reduce 54
	LOR  reduce 54
	';'  reduce 54
	']'  reduce 54
	')'  reduce 54


state 97
	opt_declaration : declaration .  (43)

	.  reduce 43


state 98
	function : declaration E '(' opt_declaration . ')' ';'  (37)
	function : declaration E '(' opt_declaration . ')' '{' statements '}'  (38)

	')'  shift 107
	.  error


state 99
	vars : var ',' vars .  (15)

	.  reduce 15


state 100
	arrays : '[' . num ']' arrays  (21)

	NUMBER  shift 108
	.  error

	num  goto 109


state 101
	var : addresses IDENTIFIER arrays .  (16)

	.  reduce 16


state 102
	while_statement : WHILE '(' lbl expression ')' . lbl statement jump  (45)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 110


state 103
	for_statement : FOR '(' opt_expression ';' lbl . opt_expression ';' lbl opt_expression jump ')' lbl statement jump  (46)
	opt_expression : .  (47)

	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	';'  reduce 47

	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	postfix_expression  goto 22
	prefix_expression  goto 23
	assignment  goto 72
	opt_expression  goto 111


state 104
	if_statement : IF '(' expression ')' lbl . statement  (44)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	.  error

	statement  goto 112
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 105
	arrayref : arrayref '[' expression ']' .  (68)

	.  reduce 68


state 106
	statements : '{' P statements '}' Q .  (3)

	.  reduce 3


state 107
	function : declaration E '(' opt_declaration ')' . ';'  (37)
	function : declaration E '(' opt_declaration ')' . '{' statements '}'  (38)

	'{'  shift 113
	';'  shift 114
	.  error


state 108
	num : NUMBER .  (22)

	.  reduce 22


state 109
	arrays : '[' num . ']' arrays  (21)

	']'  shift 115
	.  error


state 110
	while_statement : WHILE '(' lbl expression ')' lbl . statement jump  (45)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	.  error

	statement  goto 116
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 111
	for_statement : FOR '(' opt_expression ';' lbl opt_expression . ';' lbl opt_expression jump ')' lbl statement jump  (46)

	';'  shift 117
	.  error


state 112
	if_statement : IF '(' expression ')' lbl statement .  (44)

	.  reduce 44


state 113
	function : declaration E '(' opt_declaration ')' '{' . statements '}'  (38)
	statements : .  (2)

	WHILE  shift 1
	FOR  shift 2
	IF  shift 3
	INCR  shift 4
	DECR  shift 5
	TRUE  shift 6
	FALSE  shift 7
	NUMBER  shift 8
	IDENTIFIER  shift 9
	INT_  shift 10
	FLOAT_  shift 11
	'{'  shift 12
	'}'  reduce 2

	statement  goto 14
	logical_or  goto 15
	logical_and  goto 16
	terminal  goto 17
	expression  goto 18
	multiplicative_expression  goto 19
	additive_expression  goto 20
	if_statement  goto 21
	postfix_expression  goto 22
	prefix_expression  goto 23
	statements  goto 118
	assignment  goto 25
	while_statement  goto 26
	for_statement  goto 27
	function  goto 28
	declaration  goto 29
	type  goto 30


state 114
	function : declaration E '(' opt_declaration ')' ';' .  (37)

	.  reduce 37


state 115
	arrays : '[' num ']' . arrays  (21)
	arrays : .  (20)

	'['  shift 100
	';'  reduce 20
	','  reduce 20
	'('  reduce 20
	')'  reduce 20

	arrays  goto 119


state 116
	while_statement : WHILE '(' lbl expression ')' lbl statement . jump  (45)
	jump : .  (49)

	.  reduce 49

	jump  goto 120


state 117
	for_statement : FOR '(' opt_expression ';' lbl opt_expression ';' . lbl opt_expression jump ')' lbl statement jump  (46)
	lbl : .  (73)

	.  reduce 73

	lbl  goto 121

